# django-vue-demo

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml
container/etc/nginx/sites-enabled/: default
container/srv/: supervisord.conf
project/: settings.py  urls.py
project/front_app/: apps.py  config.py
project/front_app/frontend/: package-lock.json  package.json  vite.config.js
project/front_app/frontend/src/: App.vue
project/front_app/frontend/src/components/: HelloWorld.vue
project/front_app/templates/front_app/: index.html
project/front_app/templatetags/: render_vite_bundle.py
