[tool.poetry]
name = "django-vue-demo"
version = "0.1.0"
description = ""
authors = ["David Kwast <david@kwast.me>"]
readme = "README.md"
packages = []


[tool.poetry.dependencies]
python = "^3.10"
django = "~4.1.6"
python-decouple = "^3.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
pytz = "*"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
